- Added freespells custom improvement to improvements.xml
- Added knowledgeskillkarmacostmin bonus to the Jack of All Trades quality and Learning Stimulator nanoware. 
- Added missing Black Magic [alt] tradition from FA. Personal Demons bonus not implemented; will need a new bonus created for it.
- Range Modifiers are now specified in ranges.xml

New Strings:
- String_DisableSkillGroupPrompt
- Message_CyberzombieRequirementsImprovement
- Checkbox_Options_AllowTechnomancerSchooling
- Label_Dodge
- String_Avail
- String_Capacity
- String_Cost
- String_Source
- String_Accessories
- String_Accuracy
- String_Ammo
- String_AP
- String_Damage
- String_Dicepool
- String_Mode
- String_RC
- String_Reach
- Message_DeleteSkill
- String_MetersPerHit

Build 209

Application Changes:
- Metagenic quality balances are now shown in the Karma summary tab while in create mode. This allows for more easily seeing how many qualities you need to take to even up, and properly accounts for the karma lost to balance up positive and negative metagenic qualities.
- Internally changed all 'Metagenetic' references (except for the improvement type) to 'Metagenic'. 
- Skills can now benefit from Conditional improvements that are not applied to the base pool of a skill. 
- Added a 'GetAvailableAmmo' int to the Print method for weapons, exposed as 'availableammo'. This provides a count of the total amount of ammunition that can fit into the current weapon.It does NOT filter by types of ammunition, just the total available amount. 
- Weapons can now use a 'useskillspec' node to force the specialisation they use in place of their name. Mostly intended to be used for Exotic Melee/Ranged weapons.
- All equipment items that specify a Rating (Cyberware, Gear, Vehicle Mods, Weapon Accessories) can now specify a RatingLabel that is applied in place of the standard Rating. For example, Fiberoptic Hair can specify that the Rating is ten-centimetre increments of length. 