@@ -752,5 +752,35 @@
       <xml><![CDATA[{val}]]></xml>
       <page>Allows the character to mark some spells as Free, avoiding Karma costs.</page>
     </improvement>
+    <improvement>
+      <name>Mental Limit</name>
+      <id>mentallimit</id>
+      <internal>mentallimit</internal>
+      <fields>
+        <field>val</field>
+      </fields>
+      <xml><![CDATA[{val}]]></xml>
+      <page>Adjusts the character's Mental Limit by the listed value.</page>
+    </improvement>
+    <improvement>
+      <name>Physical Limit</name>
+      <id>physicallimit</id>
+      <internal>physicallimit</internal>
+      <fields>
+        <field>val</field>
+      </fields>
+      <xml><![CDATA[{val}]]></xml>
+      <page>Adjusts the character's Physical Limit by the listed value.</page>
+    </improvement>
+    <improvement>
+      <name>Social Limit</name>
+      <id>sociallimit</id>
+      <internal>sociallimit</internal>
+      <fields>
+        <field>val</field>
+      </fields>
+      <xml><![CDATA[{val}]]></xml>
+      <page>Adjusts the character's Social Limit by the listed value.</page>
+    </improvement>
   </improvements>
 </chummer>
